7-service/newservice-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: secondapp
spec:
  type: LoadBalancer
  selector:
    example: second
  ports:
  - port: 80
    protocol: TCP
    nodePort: 32500
  sessionAffinity: None
status:
  loadBalancer: {}
