7-service/newservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: secondapp
spec:
  selector:
    example: second
  ports:
  - port: 80
    protocol: TCP
  sessionAffinity: None
status:
  loadBalancer: {}
